# hook

./: .gitignore  Cargo.toml  README.md  config.toml  test.md
.github/: copilot-instructions.md
scripts/: generate-certs.sh
src/: config.rs  handlers.rs  main.rs  ops.rs  security.rs
