[package]
name = "hook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bytes = "1.11.0"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
simd-json = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
